<resources>
    <string name="app_name">Ramu-Munimji</string>
    <string name="ankur">Ankur</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="please_enter_otp">Please enter OTP received on your registered mobile number</string>
    <string name="title_activity_dashboard">ActivityDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hari Om Varieties</string>
    <string name="nav_header_subtitle">1234567890</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_customer_name">Enter customer name</string>
    <string name="customer_name">Customer Name</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="vehicle_type">Select vehicle type</string>
    <string name="vehicle_type_name">Type</string>
    <string name="vehicle_model">Enter vehicle model</string>
    <string name="vehicle_model_name">Model</string>
    <string name="Vehicle_name">Vehicle name</string>
    <string name="date">Date</string>
    <string name="enter_owner_name">Enter owner name</string>
    <string name="enter_address">Enter Address</string>
    <string name="Address">Address</string>
    <string name="buisness_name">Buisness name</string>
    <string name="buisness">Biz name</string>
    <string name="buisnesstype">Biz type</string>
    <string name="shop_id">Shop Id</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_credit_amount">Enter credit amount</string>
    <string name="enter_debit_amount">Enter debit amount</string>
    <string name="select_crop">Select crop</string>
    <string name="vehicle_number">Vehicle number</string>
    <string name="vehicle_number_name">Number</string>
    <string name="vehicle_number_with_dots">Vehicle number : </string>
    <string name="number">No. : </string>
    <string name="enter_Litre">Enter Litre</string>
    <string name="enter_purpose">Enter transaction particulars</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="no_of_acre">No of acres</string>
    <string name="current_km_Milage">Current KM Mileage</string>
    <string name="current_km_Milage_name">Mileage</string>
    <string name="enter_period">Enter period( in months )</string>
    <string name="three_months">Select months</string>
    <string name="next_service_date">Next service date</string>
    <string name="comments">Comments</string>
    <string name="Vehicle_service_particculars">Vehicle service particculars</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="Customer_updated">Customer Record Updated</string>
    <string name="Supplier_updated">Supplier Record Saved</string>
    <string name="transaction_delete">Trasaction Deleted</string>
    <string name="save">Ok</string>
    <string name="data_save">Profile Data Saved</string>
    <string name="enter_village">Enter village</string>
    <string name="Send_sms_to_customer">Send sms to customer</string>
    <string name="Send_sms_to_supplier">Send sms to supplier</string>
    <string name="enter_taluka">Enter taluka</string>
    <string name="enter_district">Enter district</string>
    <string name="select_state">Select State</string>
    <string name="State">State</string>
    <string name="select_customer">Select customer</string>
    <string name="enter_country">Enter country</string>
    <string name="Country">Country</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="Select_buisness_type">Select buisness type</string>
    <string name="We_need_permission">We need permission to capture images</string>
    <string name="We_need_permission_Audio">We need permission to capture audio</string>
    <string name="Please_permit_the_permission_through">Please permit the permission through</string>
    <string name="Settings_screen">Settings screen.</string>
    <string name="Permit_Manually">Permit Manually</string>
    <string name="select_file">Select File.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="Login_failed">Login failed... please try again</string>
    <string name="cancel_two">Cancel</string>
    <string name="India">India</string>
    <string name="enter_Expense">Enter ExpenseType</string>
    <string name="Expense_Type">Expense Type</string>
    <string name="Expense_Amount">Expense Amount</string>
    <string name="expense_purpose">Enter Expense Type</string>
    <string name="enter_id">Enter ID</string>
    <string name="select_Date">Select Date</string>
    <string name="Crop_plantation_date">Crop plantation date</string>
    <string name="service_date">Service date</string>
    <string name="service_date_name">Date</string>
    <string name="hello_im_hearing_you">Hello I am hearing you!</string>
    <string name="ok">Ok</string>
    <string name="amount">Amount</string>
    <string name="amountDot">Amount : </string>
    <string name="select_contact">Select contact</string>
    <string name="menu_home">Home</string>
    <string name="profile">Customer Profile</string>
    <string name="supplier_profile">Supplier Profile</string>
    <string name="Filter_screen">Filter</string>
    <string name="oustanding_dot">Outstanding : </string>
    <string name="menu_outstanding">Outstanding Report</string>
    <string name="menuoutstanding">Outstanding</string>
    <string name="customer_outstanding">Customer Outstanding</string>
    <string name="customer_outstanding_menus">Customer Outstanding</string>
    <string name="minus">Negative</string>
    <string name="add_service_header">New Service Entry</string>
    <string name="add_crop">Add Crop</string>
    <string name="menu_payment_received">Payment received</string>
    <string name="menu_sale">Sale</string>
    <string name="sales">Sales</string>
    <string name="menu_salereport">Sale Report</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_purchase">Purchase</string>
    <string name="purchase">Purchase</string>
    <string name="menu_purchaseReport">Purchase Report</string>
    <string name="supplier_outstanding">Supplier Outstanding</string>
    <string name="menu_purchasePaid">Amount Paid</string>
    <string name="menu_other">Other</string>
    <string name="menu_add_customer">Add customer</string>
    <string name="merge">Merge</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="merge_confirmation">Are you sure, you want to \n merge?</string>
    <string name="delete_confirmation">Are you sure, you want to \n delete?</string>
    <string name="menu_help">Help</string>
    <string name="menu_setting">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="maharashtra">Maharashtra</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="RAMU_MUNIMJI">Ramu Munimji</string>
    <string name="PLEASE_ENTER_MOBILE_NUMBER">Please enter mobile number</string>
    <string name="please_check_internet">You are offline, please check internet connecton</string>
    <string name="please_check_internet_and_try_again">Please check internet connecton. Try again.</string>
    <string name="File_downloaded">PDF Report downloaded</string>
    <string name="Downloading">PDF Report downloading, please wait</string>
    <string name="crop_added">Crop Record Saved</string>
    <string name="you_are_offline">You are offline, please check internet connecton</string>
    <string name="please_enter_10_digit_mobile_number">Please enter 10 digit mobile number</string>
    <string name="please_enter_4_digit_otp">Please enter 4 digit otp</string>
    <string name="we_sent_otp">We have sent an OTP on your</string>
    <string name="mobile_number">mobile number</string>
    <string name="mobile">Mobile</string>
    <string name="Please_select_other_customer">Please select other customer</string>
    <string name="contact_mail">customercare@Ramumunimji.com</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="contact_one">+91 72768 38431</string>
    <string name="contact_two">+91 91453 20664</string>
    <string name="Total_Customers">Total Customers</string>
    <string name="Total_suppliers">Total Suppliers</string>
    <string name="total">Total :  </string>
    <string name="total_without_dots">Total  </string>
    <string name="Total_Outstanding">Total Outstanding</string>
    <string name="search">Search</string>
    <string name="vehicle_maintainace">Vehicle Service Record</string>
    <string name="menu_expense_reports">Expense Report</string>
    <string name="expense_report">Expense report</string>
    <string name="menu_sales_reports">Sales Reports</string>
    <string name="outstanding_summary">Outstanding Report</string>
    <string name="supplier_summary">Supplier Report</string>
    <string name="crop">Crop</string>
    <string name="custom_tab_menu">Menu</string>
    <string name="custom_tab_report">Reports</string>
    <string name="crop_master_Data_is_not_allowed">Crop master data is not assigned to you,  please contact customer care</string>
    <string name="thisfieldisforoflineuse">This fields are for ofline use only.</string>
    <string name="garage">Garage</string>
    <string name="due_date_with_dots">Due date : </string>
    <string name="Customer_Id">Id :</string>
    <string name="vehicle_Type">Vehicle type : </string>
    <string name="Merge">Merge</string>
    <string name="Add_crop">Add crop</string>
    <string name="add_service">Add Service</string>
    <string name="Entry">Entry</string>
    <string name="Crop_name">Crop Name</string>
    <string name="vehicle_name">Vehicle name</string>
    <string name="crop_details">Crop Details</string>
    <string name="vehilce_details">Vehicle details</string>
    <string name="expenses">Expense</string>
    <string name="litre">Liter</string>
    <string name="remark">Remark</string>
    <string name="Details">Details</string>
    <string name="you_will_receive">You Will Pay</string>
    <string name="you_will_receive_two">You Will receive</string>
    <string name="you_will_pay">You Will Pay</string>
    <string name="acre">Acre</string>
    <string name="Pesticides">Pesticides</string>
    <string name="due_date">Due date</string>
    <string name="Pesticides_two">Pesticides : </string>
    <string name="Debit_rs">Debit (Rs.)</string>
    <string name="Debit">Debit</string>
    <string name="Purchase_Amount">Purchase Amount</string>
    <string name="Purchase">Purchase</string>
    <string name="rupee">Rupees</string>
    <string name="Credit">Credit</string>
    <string name="Amount_Paid">Amount Paid</string>
    <string name="amount_received">Amount Received</string>
    <string name="fertiliser">Fertiliser</string>
    <string name="Last_service_Date">Service date</string>
    <string name="fertiliser_two">Fertiliser : </string>
    <string name="outstanding_list">Customer Outstanding</string>
    <string name="supplier_list">Supplier Outstanding</string>
    <string name="ID">ID : </string>
    <string name="debit_amount">Debit Amount</string>
    <string name="credit_amount">Credit Amount</string>
    <string name="Planted">Planted : </string>
    <string name="Please_add_transaction">Please add transaction</string>
</resources>