<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/_20sdp"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageviewCross"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_cross" />

        <TextView
            android:id="@+id/textview_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/myriadprobold"
            tools:text="@string/Credit"
            android:textSize="@dimen/_19sdp" />

        <EditText
            android:id="@+id/edittext_CustName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_header"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:ellipsize="end"
            android:hint="@string/enter_customer_name"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edittext_enterAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_CustName"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:ellipsize="end"
            android:hint="@string/enter_amount"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_enterAmount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/background_gradient"
            android:text="@string/submit"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textview_Listening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_submit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/myriadprobold"
            android:foregroundGravity="center"
            android:freezesText="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/hello_im_hearing_you"
            android:textSize="@dimen/_19sdp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>